--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="size">
-    <div class="btn-group-vertical size" style="width: 100%;align-items: center;">
+    <div class="btn-group-vertical size" style="width: 100%;display: flow-root;margin-left: 35%;">
         <p class="lead-3">
             <a class="btn btn-primary btn-lg btnCategoria size-btn2" href="problemas.php?E=1" role="button">Logic1</a>
         </p>
