--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body class="size">
-    <div class="btn-group-vertical size" style="width: 100%;display: flow-root;margin-left: 35%;">
+    <h1 class="display-6" style="margin-top: 5%;margin-bottom: 3%;">CodingBat Problem Solving</h1>
+    <div class="btn-group-vertical size" style="width: 75%;display: flow-root;margin-left: 40%;">
         <p class="lead-3">
             <a class="btn btn-primary btn-lg btnCategoria size-btn2" href="problemas.php?E=1" role="button">Logic1</a>
         </p>
