--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <title>Document</title>
 </head>
-<body class="size">
+<body class="size" style="background-color: #ecf0f1;">
     <h1 class="display-6" style="margin-top: 5%;margin-bottom: 3%;">CodingBat Problem Solving</h1>
     <div class="btn-group-vertical size" style="width: 75%;display: flow-root;margin-left: 40%;">
         <p class="lead-3">
